objects/SVMXC__Service_Order__c.object
<CustomObject>
    <fields>
        <fullName>BD_Any_Parts_Eligible_for_Return__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Any Parts Eligible for Return</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BD_Current_User_Profile__c</fullName>
        <formula>$Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_Equipment_Part_Return_Number__c</fullName>
        <description>The Return Part Number from the corresponding Product Plant record. Used in the RMA and Loaner when Equipment product is &quot;Obsolete&quot; in SAP.</description>
        <inlineHelpText>The Return Part Number from the corresponding Product Plant record. Used in the RMA and Loaner when Equipment product is &quot;Obsolete&quot; in SAP.</inlineHelpText>
        <label>Equipment Part Return Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_Escalate_to_Depot_Date_Time__c</fullName>
        <label>Escalate to Depot Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BD_Escalate_to_Depot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalate to Depot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BD_Number_of_Extended_Warranty_Parts__c</fullName>
        <label>Number of Extended Warranty Parts</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BD_Obsolete_Material__c</fullName>
        <formula>SVMXC__Component__r.BD_Obsolete_Material__c</formula>
        <label>Is Obsolete Material?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BD_Recommended_Escalation__c</fullName>
        <description>Recommendation between Field Service and Depot Repair, based on the Installed Product and its Preferred Technician</description>
        <formula>CASE( SVMXC__Component__r.BD_Escalation_Recommendation__c , 
    &quot;Depot Repair&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01519000000g4Ky&quot;,&quot;DEPOT_REPAIR&quot;) 
      + &quot; Installed Product should be returned for Depot Repair&quot;, 
    &quot;Field Service&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01519000000g4Kz&quot;,&quot;FIELD_SERVICE&quot;)
      + &quot; Installed Product should be repaired by a Field Service Engineer&quot;,
    &quot;N/A&quot;)</formula>
        <inlineHelpText>Recommendation between Field Service and Depot Repair, based on the Installed Product and its Preferred Technician</inlineHelpText>
        <label>Recommended Escalation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Group__c</fullName>
        <formula>IF(LEN(TEXT(SVMXC__Component__r.SVMXC__Product__r.Family)) = 5,  RIGHT(TEXT(SVMXC__Component__r.SVMXC__Product__r.Family), 2) , RIGHT(TEXT(SVMXC__Component__r.SVMXC__Product__r.Family), 3 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
                <value>
                    <fullName>BO</fullName>
                </value>
                <value>
                    <fullName>BQ</fullName>
                </value>
                <value>
                    <fullName>BR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Display_Contact_Name_on_FSR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to show/hide customer name on FSR.  Added to the SFM for selecting who will get emailed report</description>
        <label>Display Contact Name on FSR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimate_Approval_Method__c</fullName>
        <description>Displays the Estimate Approval Method in the Service Estimate Process</description>
        <inlineHelpText>Displays the Approval Method in the Adjustment Process</inlineHelpText>
        <label>Adjustment Approval Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IP_Serial_Number__c</fullName>
        <description>formula for SN from IP.  Specific Ask from TS</description>
        <formula>SVMXC__Component__r.SVMXC__Serial_Lot_Number__c</formula>
        <label>IP Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instance_URL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_360, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_360))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instance URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Time__c</fullName>
        <formula>ABS(SVMXC__Case__r.CreatedDate - SVMX_PS_Accept_Reject_WO_Date_Time__c)</formula>
        <label>Response Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Account_Address__c</fullName>
        <formula>SMAX_PS_Account_Street__c &amp;&quot;, &quot; &amp;
SMAX_PS_Account_City__c &amp;&quot;, &quot;&amp; SMAX_PS_Account_State__c &amp;&quot;, &quot;&amp; SMAX_PS_Account_Zip_Code__c &amp;&quot;, &quot; &amp;
SMAX_PS_Account_Country__c</formula>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Account_City__c</fullName>
        <description>City address of work order account. Populated via trigger on work order creation.</description>
        <label>Account City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Account_Country__c</fullName>
        <description>Country of work order account. Populated via trigger on work order creation.</description>
        <label>Account Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Account_State__c</fullName>
        <description>State address of work order account. Populated via trigger on work order creation.</description>
        <label>Account State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Account_Street__c</fullName>
        <description>Street address of work order account. Populated via trigger on work order creation.</description>
        <label>Account Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Account_Zip_Code__c</fullName>
        <description>Zip Code of work order account. Populated via trigger on work order creation.</description>
        <label>Account Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Anticipated_Revisit_Date__c</fullName>
        <description>Captures anticipated revisit date when a work order will be completed.</description>
        <label>Anticipated Revisit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Approval_History__c</fullName>
        <description>Denotes the estimate approval history</description>
        <formula>IF(NOT(ISBLANK(SMAX_PS_Estimate_Approval_Date__c)),&quot;Estimate Approval Date: &quot; + TEXT(DATEVALUE(SMAX_PS_Estimate_Approval_Date__c)), &quot;Estimate Approval Date: N/A&quot;) 
&amp;  
&quot; , &quot;
&amp;
BR()
&amp; 
IF(NOT(ISBLANK(SMAX_PS_Final_Approved_Estimate_Amount__c)),&quot;Final Approved Estimate: &quot; + TEXT(SMAX_PS_Final_Approved_Estimate_Amount__c), &quot;Final Approved Estimate: N/A&quot;)
&amp; 
&quot; , &quot; 
&amp;
BR()
&amp;  
IF(NOT(ISBLANK(SMAX_PS_Estimate_Approver__r.Id)),&quot;Estimate Approver: &quot; + SMAX_PS_Estimate_Approver__r.FirstName +  &quot; &quot; + SMAX_PS_Estimate_Approver__r.LastName,&quot;Estimate Approver: N/A&quot;)
&amp;
&quot; , &quot; &amp;
BR()
&amp;
IF(NOT(ISBLANK(SVMXC__Preferred_Technician__r.Name)), &quot;Preferred Technician: &quot; + SVMXC__Preferred_Technician__r.Name, &quot;Preferred Technician: N/A&quot;)</formula>
        <inlineHelpText>Denotes the estimate approval history</inlineHelpText>
        <label>Estimate Approval History</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Asset_Condition__c</fullName>
        <description>allows for FSE to input concerns about the asset condition</description>
        <inlineHelpText>allows for FSE to input concerns about the asset condition</inlineHelpText>
        <label>Asset Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Asset_ID__c</fullName>
        <description>Asset ID from Installed Product</description>
        <inlineHelpText>Asset ID from Installed Product</inlineHelpText>
        <label>Asset ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_AutoAssignmentNotes__c</fullName>
        <description>Notes from the Auto Assignment Engine</description>
        <inlineHelpText>Notes from the Auto Assignment Engine</inlineHelpText>
        <label>Auto Assignment Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_BillTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Orders (Bill To Customer)</relationshipLabel>
        <relationshipName>WorkOrderBillTos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CIN_Number__c</fullName>
        <description>Track CIN Number in the Work Order</description>
        <inlineHelpText>Track CIN Number in the Work Order</inlineHelpText>
        <label>CIN Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Client_Ability_to_Resolve_Issues__c</fullName>
        <description>Tracks the ability of the client to resolve issues on their own with assistance of PKI remote support (Customer Care). Info populated form the Location object</description>
        <inlineHelpText>Tracks the ability of the client to resolve issues on their own with assistance of PKI remote support (Customer Care). Info populated form the Location object</inlineHelpText>
        <label>Client Ability to Resolve Issues</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Closed_in_Last_6_Months__c</fullName>
        <formula>NOW() - SVMXC__Completed_Date_Time__c &lt; 180</formula>
        <label>Closed in Last 6 Months</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Competitive_Product_Info__c</fullName>
        <description>Text filed that display the information of any competitive products</description>
        <inlineHelpText>Text filed that display the information of any competitive products</inlineHelpText>
        <label>Competitive Product Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Complaint_Required_Details_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checks if the complaint required details long text area is populated</description>
        <inlineHelpText>Checks if the complaint required details long text area is populated</inlineHelpText>
        <label>Complaint Required Details Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Complaint_Required_Details__c</fullName>
        <description>Denotes required details related to a complaint</description>
        <inlineHelpText>Denotes required details related to a complaint</inlineHelpText>
        <label>Complaint Required Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Completion_Errors__c</fullName>
        <description>When the WO transitions to &quot;Work Complete&quot;, if any validation rules prevent successful completion this field will capture the errors.</description>
        <inlineHelpText>When the WO transitions to &quot;Work Complete&quot;, if any validation rules prevent successful completion this field will capture the errors.</inlineHelpText>
        <label>Completion Errors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ContactName__c</fullName>
        <description>Contact Name</description>
        <inlineHelpText>Contact Name</inlineHelpText>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ContractEntitlement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Entitlement</label>
        <referenceTo>SVMXC__Service_Contract_Services__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ContractItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Item</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipLabel>Work Orders (Contract Item)</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Converted_from_Estimate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that an Estimate work order has been converted to a Field Service work order</description>
        <inlineHelpText>Denotes that an Estimate work order has been converted to a Field Service work order</inlineHelpText>
        <label>Converted from Estimate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Count_WO__c</fullName>
        <description>Used in report to count one work order</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used in report to count one work order</inlineHelpText>
        <label>Count WO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CoveredProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship to the Covered Product</description>
        <label>Covered Product</label>
        <referenceTo>SVMXC__Service_Contract_Products__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CreditHoldReason__c</fullName>
        <label>Credit Hold Reason</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CreditHold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Currency_Symbol__c</fullName>
        <formula>CASE (CurrencyIsoCode, 
&quot;AED&quot;,&quot;د.إ&quot;, 
&quot;ARS&quot;,&quot;$&quot;, 
&quot;AUD&quot;,&quot;$&quot;, 
&quot;BHD&quot;,&quot;.د.ب&quot;, 
&quot;BRL&quot;,&quot;R$&quot;, 
&quot;CAD&quot;,&quot;C$&quot;, 
&quot;CHF&quot;,&quot;CHF&quot;, 
&quot;CLP&quot;,&quot;$&quot;, 
&quot;COP&quot;,&quot;$&quot;, 
&quot;CRC&quot;,&quot;₡&quot;, 
&quot;CZK&quot;,&quot;Kč&quot;, 
&quot;DKK&quot;,&quot;kr&quot;, 
&quot;EGP&quot;,&quot;ج.م&quot;, 
&quot;EUR&quot;,&quot;€&quot;, 
&quot;GBP&quot;,&quot;£&quot;, 
&quot;HKD&quot;,&quot;HK$&quot;, 
&quot;HUF&quot;,&quot;Ft&quot;, 
&quot;IDR&quot;,&quot;Rp&quot;, 
&quot;ILS&quot;,&quot;₪&quot;, 
&quot;INR&quot;,&quot;Rs.&quot;, 
&quot;JPY&quot;,&quot;¥&quot;, 
&quot;KRW&quot;,&quot;₩&quot;, 
&quot;LYD&quot;,&quot;LYD&quot;, 
&quot;MXN&quot;,&quot;$&quot;, 
&quot;MYR&quot;,&quot;RM&quot;, 
&quot;NGN&quot;,&quot;₦&quot;, 
&quot;NOK&quot;,&quot;kr&quot;, 
&quot;NZD&quot;,&quot;$&quot;, 
&quot;PHP&quot;,&quot;₱&quot;, 
&quot;PLN&quot;,&quot;zł&quot;, 
&quot;RMB&quot;,&quot;RMB&quot;, 
&quot;RUB&quot;,&quot;руб&quot;, 
&quot;SAR&quot;,&quot;ر.س&quot;, 
&quot;SEK&quot;,&quot;kr&quot;, 
&quot;SGD&quot;,&quot;S$&quot;, 
&quot;THB&quot;,&quot;฿&quot;, 
&quot;TRY&quot;,&quot;YTL&quot;, 
&quot;TWD&quot;,&quot;NT$&quot;, 
&quot;USD&quot;,&quot;$&quot;, 
&quot;VEB&quot;,&quot;VEB&quot;, 
&quot;VND&quot;,&quot;₫&quot;, 
&quot;ZAR&quot;,&quot;R&quot;, 
TEXT(CurrencyIsoCode) 
)</formula>
        <label>Currency Symbol</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Current_Estimate_Amount__c</fullName>
        <description>Displays the Current Estimate Amount in the Service Estimate Process</description>
        <inlineHelpText>Displays the Current Estimate Amount in the Service Estimate Process</inlineHelpText>
        <label>Current Estimate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Current_User_Name__c</fullName>
        <formula>$User.FirstName + &apos; &apos; + $User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CustomerPODate__c</fullName>
        <label>Customer PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CustomerPO__c</fullName>
        <label>Customer PO</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Customer_Action_Required__c</fullName>
        <description>Denotes what specific actions are required by the customer for the Work Order to move forward</description>
        <inlineHelpText>Denotes what specific actions are required by the customer for the Work Order to move forward</inlineHelpText>
        <label>Customer Action Required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Customer_Notes__c</fullName>
        <description>Denotes customer notes from crc</description>
        <formula>SVMXC__Case__r.SMAX_PS_Customer_Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Denotes customer notes from crc</inlineHelpText>
        <label>Customer Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Customer_Order_Id__c</fullName>
        <description>Represents the &quot;BT Task&quot; in SAP.</description>
        <inlineHelpText>Represents the &quot;BT Task&quot; in SAP.</inlineHelpText>
        <label>Enterprise Customer Order Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Customer_Required_Start_Date__c</fullName>
        <description>Date that the customer requires to start</description>
        <inlineHelpText>Date that the customer requires to start</inlineHelpText>
        <label>Customer Required Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_DMR_Number__c</fullName>
        <description>DMR Number</description>
        <inlineHelpText>DMR Number</inlineHelpText>
        <label>DMR Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_DeliveryNumber__c</fullName>
        <description>Delivery number from the install.</description>
        <label>Delivery Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_EInvoice_Code_1__c</fullName>
        <label>E-Invoice Code 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_EInvoice_Code_2__c</fullName>
        <label>E-Invoice Code 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_EInvoice_Code_3__c</fullName>
        <label>E-Invoice Code 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_EInvoice_Customer_Id__c</fullName>
        <label>E-Invoice Customer Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_EInvoice_Platform_Id__c</fullName>
        <label>E-Invoice Platform Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_EffectOnCustomer__c</fullName>
        <label>Effect On Customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>I</fullName>
                    <label>Installation</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Minor</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Moderate</label>
                </value>
                <value>
                    <fullName>M</fullName>
                    <label>PM</label>
                </value>
                <value>
                    <fullName>P</fullName>
                    <label>Pre-Installation</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Urgent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Equipment_ID__c</fullName>
        <description>Equipment ID from Installed Product</description>
        <inlineHelpText>Equipment ID from Installed Product</inlineHelpText>
        <label>Equipment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Escalate_to_Field_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Technical Support escalates to Field Service record type and updates owner to CRC Queue</description>
        <inlineHelpText>Technical Support escalates to Field Service record type and updates owner to CRC Queue</inlineHelpText>
        <label>Escalate to Field Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Escalated_to_FS_Date_Time__c</fullName>
        <description>Denotes the date time that the technical support will escalate to field service and CRC</description>
        <inlineHelpText>Denotes the date time that the technical support will escalate to field service and CRC</inlineHelpText>
        <label>Escalated to Field Service Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Estimate_Approval_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Displays the current date/time of the Estimate Approval in the Service Estimate Process</description>
        <inlineHelpText>Displays the current date/time of the Estimate Approval in the Service Estimate Process</inlineHelpText>
        <label>Estimate Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Estimate_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the User, displays the Estimate Approver</description>
        <inlineHelpText>Lookup to the User, displays the Estimate Approver</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Estimate_Description__c</fullName>
        <description>Denotes the estimate description of the estimate</description>
        <inlineHelpText>Denotes the estimate description of the estimate</inlineHelpText>
        <label>Estimate Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Estimate_Expiry_Date__c</fullName>
        <description>Expiration date for Estimate Quote</description>
        <formula>SMAX_PS_Estimate_Generated_Date__c + 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expiration date for Estimate Quote</inlineHelpText>
        <label>Estimate Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Estimate_FSR_Expiry_Date__c</fullName>
        <description>Estimate Expiry Date used for Estimate FSR</description>
        <formula>TODAY() + 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Estimate Expiry Date used for Estimate FSR</inlineHelpText>
        <label>Estimate FSR Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Estimate_Generated_Date__c</fullName>
        <description>Denotes the date that the Estimate Quote PDF was generated</description>
        <inlineHelpText>Denotes the date that the Estimate Quote PDF was generated</inlineHelpText>
        <label>Estimate Generated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Estimate_Part_Count__c</fullName>
        <description>Counts the number of estimate parts lines</description>
        <inlineHelpText>Counts the number of estimate parts lines</inlineHelpText>
        <label>Estimate Part Count</label>
        <summaryFilterItems>
            <field>SVMXC__Service_Order_Line__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Estimate</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SVMXC__Service_Order_Line__c.SVMXC__Line_Type__c</field>
            <operation>equals</operation>
            <value>Parts</value>
        </summaryFilterItems>
        <summaryForeignKey>SVMXC__Service_Order_Line__c.SVMXC__Service_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Estimate_Rejection_Reason__c</fullName>
        <description>Displays the Estimate Rejection Reason in the Service Estimate Process</description>
        <inlineHelpText>Displays the Estimate Rejection Reason in the Service Estimate Process</inlineHelpText>
        <label>Estimate Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Timing</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>No Longer Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Estimate_Status__c</fullName>
        <description>Displays the Estimate Status in the Service Estimate Process for the FSE</description>
        <inlineHelpText>Displays the Adjustment Status in the Service Process.</inlineHelpText>
        <label>Adjustment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Manager Approved</fullName>
                </value>
                <value>
                    <fullName>Manager Rejected</fullName>
                </value>
                <value>
                    <fullName>Ready for Customer</fullName>
                </value>
                <value>
                    <fullName>Pending Customer Approved</fullName>
                </value>
                <value>
                    <fullName>Customer Approved</fullName>
                </value>
                <value>
                    <fullName>Customer Rejected</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Approval Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Estimated_Labor_Unit_Price__c</fullName>
        <formula>IF(SMAX_PS_Total_Labor_Estimate_Amount__c!=0 &amp;&amp; SMAX_PS_Labor_Count__c!=0, 
SMAX_PS_Total_Labor_Estimate_Amount__c / SMAX_PS_Labor_Count__c, 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Labor Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Estimated_Travel_Unit_Price__c</fullName>
        <formula>IF(SMAX_PS_Travel_Count__c!=0&amp;&amp; SMAX_PS_Total_Travel_Estimate_Amount__c!=0, 
SMAX_PS_Total_Travel_Estimate_Amount__c / SMAX_PS_Travel_Count__c, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Travel Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ExpenseLocationNumber__c</fullName>
        <label>Expense Location Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_FSE_Closure_Reason__c</fullName>
        <description>Closure Reason- Choose from Values</description>
        <inlineHelpText>Closure Reason- Choose from Values</inlineHelpText>
        <label>FSE Closure Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Action Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_FSR_Part_Lines__c</fullName>
        <description>This field is used during the FSR generation when the user is both on or offline.</description>
        <inlineHelpText>This field is used during the FSR generation when the user is both on or offline.</inlineHelpText>
        <label>FSR Part Lines</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Fault_Code_Family__c</fullName>
        <label>Fault Code Family</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Field_Notes__c</fullName>
        <description>Denotes the field notes from the installed product</description>
        <inlineHelpText>Denotes the field notes from the installed product</inlineHelpText>
        <label>Field Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>